--- a/Astro/Views/Base.lproj/Main.storyboard
+++ b/Astro/Views/Base.lproj/Main.storyboard
@@ -307,35 +307,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uGz-xR-84N">
-                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                                <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your weight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx">
-                                <rect key="frame" x="66.5" y="86" width="242" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Your Weight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD6-cQ-Udx" userLabel="Validation error msg">
+                                <rect key="frame" x="65.5" y="86" width="244.5" height="33.5"/>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="30"/>
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="standingOnPlanet" translatesAutoresizingMaskIntoConstraints="NO" id="RaI-F9-Zhk">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="standingOnPlanet" translatesAutoresizingMaskIntoConstraints="NO" id="RaI-F9-Zhk" userLabel="Photo">
                                 <rect key="frame" x="0.0" y="205" width="375" height="502"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="RaI-F9-Zhk" secondAttribute="height" multiplier="375:502" id="I4y-z8-DVI"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXd-19-9lN" userLabel="Title Bar">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight On Other Planets" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJG-MT-o5W" userLabel="Title">
+                                        <rect key="frame" x="0.0" y="19" width="375" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="41" id="P5m-Gk-QnM"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="rJG-MT-o5W" firstAttribute="leading" secondItem="jXd-19-9lN" secondAttribute="leading" id="B2N-51-Obn"/>
+                                    <constraint firstAttribute="trailing" secondItem="rJG-MT-o5W" secondAttribute="trailing" id="IAe-TB-NVn"/>
+                                    <constraint firstAttribute="bottom" secondItem="rJG-MT-o5W" secondAttribute="bottom" id="WFv-2z-WUz"/>
+                                    <constraint firstAttribute="height" constant="60" id="hhn-bh-riU"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uGz-xR-84N">
+                                <rect key="frame" x="0.0" y="128" width="375" height="56"/>
+                                <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="RaI-F9-Zhk" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="8sJ-k2-tss"/>
-                            <constraint firstItem="uGz-xR-84N" firstAttribute="top" secondItem="8g0-fo-mqt" secondAttribute="top" id="Ar1-fC-xNy"/>
+                            <constraint firstItem="jXd-19-9lN" firstAttribute="top" secondItem="8g0-fo-mqt" secondAttribute="top" constant="-20" id="Ar1-fC-xNy"/>
                             <constraint firstItem="uGz-xR-84N" firstAttribute="trailing" secondItem="8g0-fo-mqt" secondAttribute="trailing" id="HZk-VT-boE"/>
+                            <constraint firstItem="jXd-19-9lN" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="Qpu-dT-08P"/>
+                            <constraint firstItem="jXd-19-9lN" firstAttribute="top" secondItem="agq-gj-JmO" secondAttribute="top" id="TGJ-1S-bOi"/>
+                            <constraint firstItem="AD6-cQ-Udx" firstAttribute="top" secondItem="jXd-19-9lN" secondAttribute="bottom" constant="26" id="W2J-dl-B89"/>
                             <constraint firstAttribute="bottom" secondItem="RaI-F9-Zhk" secondAttribute="bottom" constant="-40" id="WPa-2g-ICf"/>
-                            <constraint firstItem="AD6-cQ-Udx" firstAttribute="top" secondItem="uGz-xR-84N" secondAttribute="bottom" constant="10" id="c9s-13-kkt"/>
                             <constraint firstItem="RaI-F9-Zhk" firstAttribute="trailing" secondItem="8g0-fo-mqt" secondAttribute="trailing" id="coS-cL-vX0"/>
                             <constraint firstItem="uGz-xR-84N" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="hBD-zA-di4"/>
+                            <constraint firstItem="8g0-fo-mqt" firstAttribute="trailing" secondItem="jXd-19-9lN" secondAttribute="trailing" id="kKE-ZM-nCQ"/>
                             <constraint firstItem="AD6-cQ-Udx" firstAttribute="centerX" secondItem="agq-gj-JmO" secondAttribute="centerX" id="o3N-Uj-wHq"/>
+                            <constraint firstItem="uGz-xR-84N" firstAttribute="top" secondItem="AD6-cQ-Udx" secondAttribute="bottom" constant="8.5" id="pV0-9f-WdE"/>
                             <constraint firstItem="uGz-xR-84N" firstAttribute="leading" secondItem="8g0-fo-mqt" secondAttribute="leading" id="uhT-mV-Ms1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8g0-fo-mqt"/>
